<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/reroll_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/reroll_text"
        android:textColor="@color/textColor" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/reroll_one"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reroll_one">
        </Button>

        <Button
            android:id="@+id/reroll_two"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reroll_two">
        </Button>

        <Button
            android:id="@+id/reroll_three"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reroll_three" >
        </Button>

        <Button
            android:id="@+id/reroll_four"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reroll_four" >
        </Button>

    </LinearLayout>

</merge>